make dir on install, should be refactor in a cleaner way

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,8 @@
         "psr-4": {
             "Grav\\Plugin\\Newsletter\\": "classes/"
         }
+    },
+    "scripts": {
+      "post-install-cmd": "mkdir -p ../../user/data/newsletter/subscribers"
     }
 }
